remove unused files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,5 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=6.0",
-    "pytest-mock>=3.0",
-    "black>=22.0",
-    "isort>=5.0",
-    "mypy>=0.900",
+    "pytest-mock>=3.0"
 ] 
