--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "havenlighting"
 version = "0.1.0"
 description = "Python client for Haven Lighting API"
-authors = [{name = "Your Name", email = "your.email@example.com"}]
+authors = [{name = "Mickey Schwab", email = "mickeyschwab@gmail.com"}]
 license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">=3.7"
